--- a/src/Components/input-form/form.module.css
+++ b/src/Components/input-form/form.module.css
@@ -16,6 +16,14 @@
 	padding-bottom: 0px;
   }
   
+.note{
+	text-align: left;
+	font-size: 12px;
+	color: 	rgb(158, 152, 152);
+	margin: -10px 0 40px;
+	font-family: 'Courier New', Courier, monospace;
+	font-style: italic;
+}
   .container {
 	margin: 10%;
 	background: #fff;
@@ -28,7 +36,8 @@
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
-	justify-content: space-between;
+	justify-content: space-around;
+	margin: 0 auto;
   }
   
   .columnLeft, .columnRight {
@@ -37,7 +46,9 @@
   
   .leftHalf {
 	box-sizing: border-box;
-	padding: 30px;
+	padding: 40px;
+	max-width: 800px;
+	margin: 0 auto;
   }
   
   .input {
@@ -47,6 +58,11 @@
 	border-bottom: 1px solid #ccc;
   }
   
+  input::placeholder{
+	font-size: 12px;
+	font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+	font-style: italic;
+  }
   .inputLabel {
 	color: #000000;
 	font-size: 12px;
@@ -66,14 +82,7 @@
   
   .submit {
 	margin-top: 30px; /* Reduce the margin on smaller screens */
-	background: #35477d;
-	color: #fff;
-	border: none;
-	padding: 15px;
-	cursor: pointer;
-	font: inherit;
-	font-size: 12px;
-	outline: inherit;
+
   }
   
   @media (max-width: 600px) {
